[gd_scene load_steps=19 format=3 uid="uid://n4obusigydn"]

[ext_resource type="Script" path="res://Scenes&Scripts/Cards/CardVisuals/card_visuals.gd" id="1_bj7dw"]
[ext_resource type="Texture2D" uid="uid://dwo3y6ej5afg5" path="res://Assets/Sprites/Cards/Bases/BlankCardColourlessTemplate.png" id="1_ifb1p"]
[ext_resource type="Texture2D" uid="uid://yp06lawsobse" path="res://Assets/Sprites/Cards/Heros/001.png" id="2_k3nc5"]
[ext_resource type="Texture2D" uid="uid://n35s60pas62n" path="res://Assets/Sprites/UI/Player/Mana/Colourless/ColourlessFilled.png" id="2_pqi8j"]
[ext_resource type="FontFile" uid="uid://bdqdvgcjywjuo" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="3_alnvu"]
[ext_resource type="Texture2D" uid="uid://cfyi413hoka6x" path="res://Assets/Sprites/Cards/Heros/008.png" id="3_hk8qv"]
[ext_resource type="Texture2D" uid="uid://ce1y33s44h8yy" path="res://Assets/Sprites/Cards/Heros/006.png" id="4_j0gh8"]
[ext_resource type="Texture2D" uid="uid://c878nekd64n6c" path="res://Assets/Sprites/Cards/Heros/003.png" id="5_p6qjc"]
[ext_resource type="FontFile" uid="uid://f1ltt148ytjw" path="res://Assets/Fonts/Kenney Pixel.ttf" id="6_llvgy"]
[ext_resource type="Texture2D" uid="uid://kpp46u4g7uom" path="res://Assets/Sprites/Cards/Heros/005.png" id="7_2of0j"]
[ext_resource type="Texture2D" uid="uid://dclul508syovk" path="res://Assets/Sprites/Cards/Heros/010.png" id="8_brvdk"]
[ext_resource type="Texture2D" uid="uid://pb8bwnwnon2y" path="res://Assets/Sprites/Cards/Heros/011.png" id="9_5m1w2"]
[ext_resource type="Texture2D" uid="uid://cbv8t5winba60" path="res://Assets/Sprites/Cards/Heros/009.png" id="10_0qarw"]
[ext_resource type="Texture2D" uid="uid://yohlwu8mjef1" path="res://Assets/Sprites/Cards/Heros/004.png" id="11_laddi"]
[ext_resource type="Texture2D" uid="uid://bk41j4ee1r7i3" path="res://Assets/Sprites/Cards/Heros/007.png" id="12_2hyn6"]
[ext_resource type="Texture2D" uid="uid://d2euiaeqctyyq" path="res://Assets/Sprites/Cards/Heros/002.png" id="13_7qphc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_41336"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ifb1p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fwp11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hk8qv")
}],
"loop": true,
"name": &"Ancient Stag",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_j0gh8")
}],
"loop": true,
"name": &"Briarclaw Shaman",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_p6qjc")
}],
"loop": true,
"name": &"Call of the Ancients",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k3nc5")
}],
"loop": true,
"name": &"Fireball",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k3nc5")
}],
"loop": true,
"name": &"Flame Imp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2of0j")
}],
"loop": true,
"name": &"Healing Touch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_brvdk")
}],
"loop": true,
"name": &"Impish Trickster",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_5m1w2")
}],
"loop": true,
"name": &"Lupine Curse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0qarw")
}],
"loop": true,
"name": &"Mosshide Bear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_laddi")
}],
"loop": true,
"name": &"Thornhide Protector",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2hyn6")
}],
"loop": true,
"name": &"Vinegrasp Aura",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7qphc")
}],
"loop": true,
"name": &"Wilden Domain",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k3nc5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CardVisuals" type="Node2D"]
texture_filter = 1
script = ExtResource("1_bj7dw")

[node name="ManaBackgroundGeneric" type="Sprite2D" parent="."]
position = Vector2(38, -88)
texture = ExtResource("2_pqi8j")

[node name="CardBaseSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_41336")

[node name="CardHeroSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -12.5)
sprite_frames = SubResource("SpriteFrames_fwp11")
animation = &"Lupine Curse"

[node name="CardTitleLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -74.0
offset_right = 48.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_llvgy")
text = "Card Title Goes Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenceLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 24.0
offset_right = 63.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_alnvu")
theme_override_font_sizes/font_size = 16
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardManaCost" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -96.0
offset_right = 54.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_alnvu")
theme_override_font_sizes/font_size = 16
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = 24.0
offset_right = -34.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_alnvu")
theme_override_font_sizes/font_size = 16
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescriptionLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 36.0
offset_right = 50.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("6_llvgy")
text = "Description of the card goes here traditionally and more words follow"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 1
